--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>jboss-eap-7.1</module>
         <module>wildfly-14</module>
+        <module>wildfly-15</module>
         <module>update-checker</module>
     </modules>
 
@@ -55,10 +56,11 @@
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
+        <asciidoctor.plugin.version>1.5.7.1</asciidoctor.plugin.version>
         <docker.plugin.version>0.27.2</docker.plugin.version>
         <jacoco.plugin.version>0.8.2</jacoco.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
-        <wildfly.plugin.version>1.2.2.Final</wildfly.plugin.version>
+        <wildfly.plugin.version>2.0.0.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
         <maven.assembly.plugin.version>3.1.0</maven.assembly.plugin.version>
@@ -76,7 +78,7 @@
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
         <maven.scm.plugin.version>1.11.1</maven.scm.plugin.version>
-        <maven.shade.plugin.version>3.2.0</maven.shade.plugin.version>
+        <maven.shade.plugin.version>3.2.1</maven.shade.plugin.version>
         <maven.site.plugin.version>3.7.1</maven.site.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
         <maven.surefire.plugin.version>${maven.failsafe.plugin.version}</maven.surefire.plugin.version>
@@ -85,13 +87,15 @@
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.8.1</apache.commons.lang3.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <logback.version>1.2.3</logback.version>
 
         <!-- testing and static analysis -->
-        <junit.platform.version>1.3.1</junit.platform.version>
-        <junit.jupiter.version>5.3.1</junit.jupiter.version>
+        <junit.platform.version>1.3.2</junit.platform.version>
+        <junit.jupiter.version>5.3.2</junit.jupiter.version>
         <hamcrest.version>2.0.0.0</hamcrest.version>
-        <mockito.version>2.23.0</mockito.version>
-        <equalsverifier.version>3.0.2</equalsverifier.version>
+        <mockito.version>2.23.4</mockito.version>
+        <equalsverifier.version>3.1.3</equalsverifier.version>
+        <json.unit.version>2.2.0</json.unit.version>
         <restassured.version>3.2.0</restassured.version>
     </properties>
 
@@ -110,11 +114,6 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
 
