--- a/wildfly-15/pom.xml
+++ b/wildfly-15/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <groupId>ch.schlau.wurzeln.root</groupId>
-    <artifactId>wildfly-14</artifactId>
+    <artifactId>wildfly-15</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -18,36 +18,39 @@
         <javax.javaee-api.version>8.0</javax.javaee-api.version>
 
         <!-- EE8 spec with JBoss additions, from the Wildfly BOM -->
-        <jboss-javaee-8.0.version>1.0.0.Alpha1</jboss-javaee-8.0.version>
+        <jboss-javaee-8.0.version>1.0.1.Final</jboss-javaee-8.0.version>
 
-        <!-- latest Wildfly 14 dependencies -->
-        <wildfly.bom.version>14.0.0.Final</wildfly.bom.version>
+        <!-- latest Wildfly 15 dependencies -->
+        <wildfly.bom.version>15.0.0.Final</wildfly.bom.version>
 
-        <!-- MicroProfile Standard Versions provided by Wildfly 14 -->
+        <!-- MicroProfile Standard Versions provided by Wildfly 15 -->
         <mp.config.version>1.3</mp.config.version>
         <mp.health.version>1.0</mp.health.version>
+        <mp.metrics.version>1.1</mp.metrics.version>
         <mp.opentracing.version>1.1</mp.opentracing.version>
-        <smallrye.config.version>1.3.3</smallrye.config.version>
+        <mp.rest-client.version>1.0.1</mp.rest-client.version>
+        <smallrye.config.version>1.3.4</smallrye.config.version>
         <smallrye.health.version>1.0.2</smallrye.health.version>
+        <smallrye.metrics.version>1.1.2</smallrye.metrics.version>
         <smallrye.opentracing.version>1.1.1</smallrye.opentracing.version>
 
-        <!-- Artifact versions provided by Wildfly 14.0.0.Final -->
-        <!-- (see wildfly-14.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
-        <resteasy.version>3.6.1.Final</resteasy.version>
-        <yasson.version>1.0.1</yasson.version>
+        <!-- Artifact versions provided by Wildfly 15.0.0.Final -->
+        <!-- (see wildfly-15.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
+        <resteasy.version>3.6.2.Final</resteasy.version>
+        <yasson.version>1.0.2</yasson.version>
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
         <jackson-2-version>2.9.5</jackson-2-version>
         <!-- provide separate jsr310 property for compatibility with the jboss-eap7.0 root pom -->
         <jackson-datatype-jsr310.version>${jackson-2-version}</jackson-datatype-jsr310.version>
-        <infinispan.version>9.3.1.Final</infinispan.version>
+        <infinispan.version>9.4.3.Final</infinispan.version>
         <woodstox.version>5.0.3</woodstox.version>
-        <hibernate.version>5.3.6.Final</hibernate.version>
+        <hibernate.version>5.3.7.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
-        <!-- Wildfly 14.0.0.Final uses Hibernate Validator 6.0.13.Final -->
+        <!-- Wildfly 15.0.0.Final uses Hibernate Validator 6.0.13.Final -->
         <hibernate.validator.version>6.0.13.Final</hibernate.validator.version>
 
-        <!-- Wildfly 14.0.0.Final uses Weld 3.0.5 (corresponding to CDI 2.0) -->
+        <!-- Wildfly 15.0.0.Final uses Weld 3.0.5 (corresponding to CDI 2.0) -->
         <weld.version>3.0.5.Final</weld.version>
 
         <!-- Latest EE7 Wildfly plugin -->
@@ -112,9 +115,19 @@
                     <version>${mp.health.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>org.eclipse.microprofile.metrics</groupId>
+                    <artifactId>microprofile-metrics-api</artifactId>
+                    <version>${mp.metrics.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>org.eclipse.microprofile.opentracing</groupId>
                     <artifactId>microprofile-opentracing-api</artifactId>
                     <version>${mp.opentracing.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.eclipse.microprofile.rest.client</groupId>
+                    <artifactId>microprofile-rest-client-api</artifactId>
+                    <version>${mp.rest-client.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -122,7 +135,7 @@
                     <version>${smallrye.config.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-14 -->
+                            <!-- avoid Dependency convergence error (wildfly-15 -->
                             <!-- has javax.annotation-api:1.3.2, smallrye-config only 1.2) -->
                             <groupId>javax.annotation</groupId>
                             <artifactId>javax.annotation-api</artifactId>
@@ -133,6 +146,11 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-health</artifactId>
                     <version>${smallrye.health.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
+                    <artifactId>smallrye-metrics</artifactId>
+                    <version>${smallrye.metrics.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -178,7 +196,7 @@
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
-                    <!-- even though woodstox-core is in wildfly-14.0.0.Final/modules/system/layers/base/org/codehaus/woodstox, -->
+                    <!-- even though woodstox-core is in wildfly-15.0.0.Final/modules/system/layers/base/org/codehaus/woodstox, -->
                     <!-- the group id is com.fasterxml.woodstox -->
                     <groupId>com.fasterxml.woodstox</groupId>
                     <artifactId>woodstox-core</artifactId>
