--- a/jboss-eap-7.1/pom.xml
+++ b/jboss-eap-7.1/pom.xml
@@ -31,8 +31,6 @@
         <!-- (see BOM and jboss-eap-7.1/modules/system/layers/base/.overlays/layer-base-jboss-eap-7.1.x.CP) -->
         <resteasy.version>3.0.26.Final-redhat-1</resteasy.version>
         <jackson-2-version>2.8.11.redhat-1</jackson-2-version>
-        <!-- provide separate jsr310 property for compatibility with the jboss-eap7.0 root pom -->
-        <jackson-datatype-jsr310.version>${jackson-2-version}</jackson-datatype-jsr310.version>
         <!-- note: pay attention if you're using infinispan-jcache, there's no xxx-redhat-1 version of it -->
         <infinispan.version>8.2.11.Final-redhat-1</infinispan.version>
         <woodstox.version>5.0.3.redhat-1</woodstox.version>
@@ -110,7 +108,7 @@
                 <dependency>
                     <groupId>com.fasterxml.jackson.datatype</groupId>
                     <artifactId>jackson-datatype-jsr310</artifactId>
-                    <version>${jackson-datatype-jsr310.version}</version>
+                    <version>${jackson-2-version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
