--- a/jboss-eap-7.1/pom.xml
+++ b/jboss-eap-7.1/pom.xml
@@ -30,6 +30,8 @@
         <!-- Artifact versions provided by JBoss EAP 7.1.5 -->
         <!-- (see BOM and jboss-eap-7.1/modules/system/layers/base/.overlays/layer-base-jboss-eap-7.1.x.CP) -->
         <resteasy.version>3.0.26.Final-redhat-1</resteasy.version>
+        <javax.json.version>1.0.4-redhat-1</javax.json.version>
+        <!-- the glassfish RI for JSON-P is included in javax.json-1.0.4.redhat-1.jar -->
         <jackson-2-version>2.8.11.redhat-1</jackson-2-version>
         <!-- note: pay attention if you're using infinispan-jcache, there's no xxx-redhat-1 version of it -->
         <infinispan.version>8.2.11.Final-redhat-1</infinispan.version>
