--- a/thorntail-2.3/pom.xml
+++ b/thorntail-2.3/pom.xml
@@ -28,7 +28,7 @@
         <mp.jwt.version>1.1</mp.jwt.version>
         <mp.openapi.version>1.0.1</mp.openapi.version>
         <mp.opentracing.version>1.2.1</mp.opentracing.version>
-        <mp.restclient.version>1.1</mp.restclient.version>
+        <mp.rest-client.version>1.1</mp.rest-client.version>
 
         <smallrye.config.version>1.3.5</smallrye.config.version>
         <smallrye.fault-tolerance.version>1.1.0</smallrye.fault-tolerance.version>
@@ -37,7 +37,7 @@
         <smallrye.jwt.version>1.1.0</smallrye.jwt.version>
         <smallrye.openapi.version>1.0.3</smallrye.openapi.version>
         <smallrye.opentracing.version>1.2.1</smallrye.opentracing.version>
-        <smallrye.restclient.version>1.1.0</smallrye.restclient.version>
+        <smallrye.rest-client.version>1.1.0</smallrye.rest-client.version>
 
         <!-- Artifact versions provided by Thorntail build-parent-2.3.0.Final.pom -->
         <resteasy.version>3.6.2.Final</resteasy.version>
@@ -119,7 +119,7 @@
                 <dependency>
                     <groupId>org.eclipse.microprofile.rest.client</groupId>
                     <artifactId>microprofile-rest-client-api</artifactId>
-                    <version>${mp.restclient.version}</version>
+                    <version>${mp.rest-client.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -159,12 +159,27 @@
                 <dependency>
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-rest-client</artifactId>
-                    <version>${smallrye.restclient.version}</version>
+                    <version>${smallrye.rest-client.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.resteasy</groupId>
                     <artifactId>resteasy-client</artifactId>
                     <version>${resteasy.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>javax.json</groupId>
+                    <artifactId>javax.json-api</artifactId>
+                    <version>${javax.json.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish</groupId>
+                    <artifactId>javax.json</artifactId>
+                    <version>${glassfish.javax.json.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>javax.json.bind</groupId>
+                    <artifactId>javax.json.bind-api</artifactId>
+                    <version>${javax.json.bind.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>com.fasterxml.jackson.core</groupId>
@@ -187,7 +202,7 @@
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>org.hibernate</groupId>
+                    <groupId>org.hibernate.validator</groupId>
                     <artifactId>hibernate-validator</artifactId>
                     <version>${hibernate.validator.version}</version>
                 </dependency>
