Add wildfly-16, update dependencies

--- a/thorntail-2.2/pom.xml
+++ b/thorntail-2.2/pom.xml
@@ -74,6 +74,19 @@
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>${maven.enforcer.plugin.version}</version>
+                        <configuration>
+                            <!-- skip dependencyConvergence check for Thorntail, there is too much noise in the smallrye dependencies -->
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
             <dependencies>
                 <dependency>
                     <groupId>org.eclipse.microprofile.config</groupId>
