--- a/jboss-eap-7.1/pom.xml
+++ b/jboss-eap-7.1/pom.xml
@@ -140,6 +140,12 @@
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-validator</artifactId>
                     <version>${hibernate.validator.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>com.fasterxml</groupId>
+                            <artifactId>classmate</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.weld</groupId>
