--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,11 @@
 
     <modules>
         <module>jboss-eap-7.1</module>
-        <module>wildfly-14</module>
-        <module>wildfly-15</module>
         <module>thorntail-2.2</module>
         <module>thorntail-2.3</module>
+        <module>wildfly-14</module>
+        <module>wildfly-15</module>
+        <module>wildfly-16</module>
         <module>update-checker</module>
     </modules>
 
@@ -59,13 +60,14 @@
 
         <!-- non-apache maven plugin versions -->
         <asciidoctor.plugin.version>1.5.7.1</asciidoctor.plugin.version>
+        <build-helper.plugin.version>3.0.0</build-helper.plugin.version>
         <docker.plugin.version>0.28.0</docker.plugin.version>
-        <jacoco.plugin.version>0.8.2</jacoco.plugin.version>
+        <jacoco.plugin.version>0.8.3</jacoco.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
-        <wildfly.plugin.version>2.0.0.Final</wildfly.plugin.version>
+        <wildfly.plugin.version>2.0.1.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
-        <maven.assembly.plugin.version>3.1.0</maven.assembly.plugin.version>
+        <maven.assembly.plugin.version>3.1.1</maven.assembly.plugin.version>
         <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
         <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
         <maven.dependency.plugin.version>3.1.1</maven.dependency.plugin.version>
@@ -75,7 +77,7 @@
         <maven.enforcer.plugin.version>3.0.0-M2</maven.enforcer.plugin.version>
         <maven.failsafe.plugin.version>2.22.1</maven.failsafe.plugin.version>
         <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
-        <maven.jar.plugin.version>3.1.0</maven.jar.plugin.version>
+        <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
         <maven.javadoc.plugin.version>3.0.1</maven.javadoc.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
@@ -88,16 +90,16 @@
 
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.8.1</apache.commons.lang3.version>
-        <slf4j.version>1.7.25</slf4j.version>
+        <slf4j.version>1.7.26</slf4j.version>
         <logback.version>1.2.3</logback.version>
 
         <!-- testing and static analysis -->
-        <junit.platform.version>1.3.2</junit.platform.version>
-        <junit.jupiter.version>5.3.2</junit.jupiter.version>
+        <junit.platform.version>1.4.0</junit.platform.version>
+        <junit.jupiter.version>5.4.0</junit.jupiter.version>
         <hamcrest.version>2.0.0.0</hamcrest.version>
-        <mockito.version>2.23.4</mockito.version>
-        <equalsverifier.version>3.1.4</equalsverifier.version>
-        <json.unit.version>2.3.0</json.unit.version>
+        <mockito.version>2.24.5</mockito.version>
+        <equalsverifier.version>3.1.5</equalsverifier.version>
+        <json.unit.version>2.4.0</json.unit.version>
         <restassured.version>3.3.0</restassured.version>
     </properties>
 
@@ -122,7 +124,19 @@
             <!-- testing -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit.jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit.jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
                 <version>${junit.jupiter.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -144,6 +158,12 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
                 <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -207,6 +227,15 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${maven.release.plugin.version}</version>
+                    <configuration>
+                        <updateBranchVersions>true</updateBranchVersions>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
                     <version>${maven.war.plugin.version}</version>
                     <configuration>
@@ -241,6 +270,56 @@
                             <configuration>
                                 <propertyName>jacoco.integration.agent.arg</propertyName>
                             </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven.dependency.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>analyze</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>analyze-only</goal>
+                            </goals>
+                            <configuration>
+                                <verbose>true</verbose>
+                                <failOnWarning>true</failOnWarning>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>analyze-dep-mgt</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>analyze-dep-mgt</goal>
+                            </goals>
+                            <configuration>
+                                <failBuild>true</failBuild>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>${maven.enforcer.plugin.version}</version>
+                    <configuration>
+                        <rules>
+                            <dependencyConvergence/>
+                        </rules>
+                        <fail>true</fail>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>enforce-versions</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
                         </execution>
                     </executions>
                 </plugin>
@@ -311,33 +390,18 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
                         <version>${maven.dependency.plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>analyze</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>analyze-only</goal>
-                                </goals>
-                                <configuration>
-                                    <verbose>true</verbose>
-                                    <failOnWarning>true</failOnWarning>
-                                    <ignoredUnusedDeclaredDependencies>
-                                        <!-- these are declared to check that the dependency exists -->
-                                        <ignoredUnusedDeclaredDependency>javax.xml.bind</ignoredUnusedDeclaredDependency>
-                                    </ignoredUnusedDeclaredDependencies>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>analyze-dep-mgt</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>analyze-dep-mgt</goal>
-                                </goals>
-                                <configuration>
-                                    <failBuild>true</failBuild>
-                                </configuration>
-                            </execution>
-                        </executions>
+                        <configuration>
+                            <ignoredUnusedDeclaredDependencies>
+                                <!-- these are declared to check that the dependency exists -->
+                                <ignoredUnusedDeclaredDependency>javax.xml.bind</ignoredUnusedDeclaredDependency>
+                            </ignoredUnusedDeclaredDependencies>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>${maven.enforcer.plugin.version}</version>
                     </plugin>
                 </plugins>
             </build>
