--- a/wildfly-15/pom.xml
+++ b/wildfly-15/pom.xml
@@ -33,6 +33,7 @@
         <smallrye.health.version>1.0.2</smallrye.health.version>
         <smallrye.metrics.version>1.1.2</smallrye.metrics.version>
         <smallrye.opentracing.version>1.1.1</smallrye.opentracing.version>
+        <!-- wildfly 15 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- Artifact versions provided by Wildfly 15.0.0.Final -->
         <!-- (see wildfly-15.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
@@ -136,6 +137,14 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-config</artifactId>
                     <version>${smallrye.config.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (wildfly-15 -->
+                            <!-- has javax.annotation-api:1.3.2, smallrye-config only 1.2) -->
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>javax.annotation-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -191,6 +200,14 @@
                     <groupId>org.infinispan</groupId>
                     <artifactId>infinispan-core</artifactId>
                     <version>${infinispan.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (resteasy-jaxrs:3.6.1.Final -->
+                            <!-- has reactive-streams:1.0.2, infinispan-core only 1.0.1) -->
+                            <groupId>org.reactivestreams</groupId>
+                            <artifactId>reactive-streams</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
