--- a/wildfly-16/pom.xml
+++ b/wildfly-16/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <groupId>ch.schlau.wurzeln.root</groupId>
-    <artifactId>wildfly-14</artifactId>
+    <artifactId>wildfly-16</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -18,42 +18,49 @@
         <javax.javaee-api.version>8.0</javax.javaee-api.version>
 
         <!-- EE8 spec with JBoss additions, from the Wildfly BOM -->
-        <jboss-javaee-8.0.version>1.0.0.Alpha1</jboss-javaee-8.0.version>
+        <jboss-javaee-8.0.version>1.0.2.Final</jboss-javaee-8.0.version>
 
-        <!-- latest Wildfly 14 dependencies -->
-        <wildfly.bom.version>14.0.0.Final</wildfly.bom.version>
+        <!-- latest Wildfly 16 dependencies -->
+        <wildfly.bom.version>16.0.0.Final</wildfly.bom.version>
 
-        <!-- MicroProfile Standard Versions provided by Wildfly 14 -->
+        <!-- MicroProfile Standard Versions provided by Wildfly 16 -->
         <mp.config.version>1.3</mp.config.version>
         <mp.health.version>1.0</mp.health.version>
+        <mp.metrics.version>1.1</mp.metrics.version>
         <mp.opentracing.version>1.1</mp.opentracing.version>
-        <smallrye.config.version>1.3.3</smallrye.config.version>
+        <mp.rest-client.version>1.0.1</mp.rest-client.version>
+        <smallrye.config.version>1.3.4</smallrye.config.version>
         <smallrye.health.version>1.0.2</smallrye.health.version>
+        <smallrye.metrics.version>1.1.3</smallrye.metrics.version>
         <smallrye.opentracing.version>1.1.1</smallrye.opentracing.version>
+        <!-- wildfly 16 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
-        <!-- Artifact versions provided by Wildfly 14.0.0.Final -->
-        <!-- (see wildfly-14.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
-        <resteasy.version>3.6.1.Final</resteasy.version>
+        <!-- Artifact versions provided by Wildfly 16.0.0.Final -->
+        <!-- (see wildfly-16.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
+        <resteasy.version>3.6.3.Final</resteasy.version>
+        <!-- note that wildfly bundles the javax packages, but yasson depends on the jakarta.json ones -->
+        <jakarta.json.version>1.1.5</jakarta.json.version>
         <javax.json.version>1.1.2</javax.json.version>
         <glassfish.javax.json.version>1.1.2</glassfish.javax.json.version>
+        <jakarta.json.bind.version>1.0.1</jakarta.json.bind.version>
         <javax.json.bind.version>1.0</javax.json.bind.version>
-        <yasson.version>1.0.1</yasson.version>
+        <yasson.version>1.0.3</yasson.version>
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.9.5</jackson-2-version>
-        <infinispan.version>9.3.1.Final</infinispan.version>
+        <jackson-2-version>2.9.8</jackson-2-version>
+        <infinispan.version>9.4.8.Final</infinispan.version>
         <woodstox.version>5.0.3</woodstox.version>
-        <hibernate.version>5.3.6.Final</hibernate.version>
+        <hibernate.version>5.3.9.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
-        <!-- Wildfly 14.0.0.Final uses Hibernate Validator 6.0.13.Final -->
+        <!-- Wildfly 16.0.0.Final uses Hibernate Validator 6.0.15.Final -->
         <javax.validation.version>2.0.1.Final</javax.validation.version>
-        <hibernate.validator.version>6.0.13.Final</hibernate.validator.version>
+        <hibernate.validator.version>6.0.15.Final</hibernate.validator.version>
 
-        <!-- Wildfly 14.0.0.Final uses Weld 3.0.5 (corresponding to CDI 2.0) -->
+        <!-- Wildfly 16.0.0.Final uses Weld 3.1.0 (corresponding to CDI 2.0) -->
         <javax.inject.version>1</javax.inject.version>
-        <weld.version>3.0.5.Final</weld.version>
+        <weld.version>3.1.0.Final</weld.version>
 
-        <!-- Latest EE7 Wildfly plugin -->
+        <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
     </properties>
 
@@ -115,9 +122,19 @@
                     <version>${mp.health.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>org.eclipse.microprofile.metrics</groupId>
+                    <artifactId>microprofile-metrics-api</artifactId>
+                    <version>${mp.metrics.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>org.eclipse.microprofile.opentracing</groupId>
                     <artifactId>microprofile-opentracing-api</artifactId>
                     <version>${mp.opentracing.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.eclipse.microprofile.rest.client</groupId>
+                    <artifactId>microprofile-rest-client-api</artifactId>
+                    <version>${mp.rest-client.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -125,7 +142,7 @@
                     <version>${smallrye.config.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-14 -->
+                            <!-- avoid Dependency convergence error (wildfly-16 -->
                             <!-- has javax.annotation-api:1.3.2, smallrye-config only 1.2) -->
                             <groupId>javax.annotation</groupId>
                             <artifactId>javax.annotation-api</artifactId>
@@ -139,6 +156,11 @@
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
+                    <artifactId>smallrye-metrics</artifactId>
+                    <version>${smallrye.metrics.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-opentracing</artifactId>
                     <version>${smallrye.opentracing.version}</version>
                 </dependency>
@@ -146,6 +168,11 @@
                     <groupId>org.jboss.resteasy</groupId>
                     <artifactId>resteasy-client</artifactId>
                     <version>${resteasy.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>jakarta.json</groupId>
+                    <artifactId>jakarta.json-api</artifactId>
+                    <version>${jakarta.json.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>javax.json</groupId>
@@ -161,6 +188,11 @@
                     <groupId>javax.json.bind</groupId>
                     <artifactId>javax.json.bind-api</artifactId>
                     <version>${javax.json.bind.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>jakarta.json.bind</groupId>
+                    <artifactId>jakarta.json.bind-api</artifactId>
+                    <version>${jakarta.json.bind.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse</groupId>
@@ -181,14 +213,6 @@
                     <groupId>org.infinispan</groupId>
                     <artifactId>infinispan-core</artifactId>
                     <version>${infinispan.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (resteasy-jaxrs:3.6.1.Final -->
-                            <!-- has reactive-streams:1.0.2, infinispan-core only 1.0.1) -->
-                            <groupId>org.reactivestreams</groupId>
-                            <artifactId>reactive-streams</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
@@ -196,7 +220,7 @@
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
-                    <!-- even though woodstox-core is in wildfly-14.0.0.Final/modules/system/layers/base/org/codehaus/woodstox, -->
+                    <!-- even though woodstox-core is in wildfly-16.0.0.Final/modules/system/layers/base/org/codehaus/woodstox, -->
                     <!-- the group id is com.fasterxml.woodstox -->
                     <groupId>com.fasterxml.woodstox</groupId>
                     <artifactId>woodstox-core</artifactId>
