--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jboss-eap-7.1</module>
         <module>thorntail-2.2</module>
         <module>thorntail-2.3</module>
+        <module>thorntail-2.4</module>
         <module>wildfly-14</module>
         <module>wildfly-15</module>
         <module>wildfly-16</module>
@@ -59,9 +60,10 @@
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
-        <asciidoctor.plugin.version>1.5.7.1</asciidoctor.plugin.version>
+        <asciidoctor.plugin.version>1.5.8</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.0.0</build-helper.plugin.version>
-        <docker.plugin.version>0.28.0</docker.plugin.version>
+        <dependency-check.plugin.version>5.0.0-M2</dependency-check.plugin.version>
+        <docker.plugin.version>0.29.0</docker.plugin.version>
         <jacoco.plugin.version>0.8.3</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
@@ -79,10 +81,10 @@
         <maven.failsafe.plugin.version>2.22.1</maven.failsafe.plugin.version>
         <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
         <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.0.1</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
-        <maven.scm.plugin.version>1.11.1</maven.scm.plugin.version>
+        <maven.scm.plugin.version>1.11.2</maven.scm.plugin.version>
         <maven.shade.plugin.version>3.2.1</maven.shade.plugin.version>
         <maven.site.plugin.version>3.7.1</maven.site.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
@@ -91,16 +93,26 @@
 
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.8.1</apache.commons.lang3.version>
-        <slf4j.version>1.7.26</slf4j.version>
         <logback.version>1.2.3</logback.version>
+        <lombok.version>1.18.6</lombok.version>
+        <slf4j.version>1.7.26</slf4j.version>
+
+        <!-- latest Jackson version for projects independent of an application server (AS) -->
+        <!-- most of the AS submodules redefine it with an older version -->
+        <jackson-2-version>2.9.8</jackson-2-version>
+
+        <!-- Java Expression Language (JSR 341) generally defined; the application servers -->
+        <!-- have slightly different version strings (3.0.1-b08-jbossorg-1 and 3.0.1.b08-redhat-1), -->
+        <!-- but it's always 3.0.1 -->
+        <javax.el.version>3.0.1-b11</javax.el.version>
 
         <!-- testing and static analysis -->
-        <junit.platform.version>1.4.0</junit.platform.version>
-        <junit.jupiter.version>5.4.0</junit.jupiter.version>
+        <junit.platform.version>1.4.2</junit.platform.version>
+        <junit.jupiter.version>5.4.2</junit.jupiter.version>
         <hamcrest.version>2.0.0.0</hamcrest.version>
-        <mockito.version>2.25.1</mockito.version>
-        <equalsverifier.version>3.1.7</equalsverifier.version>
-        <json.unit.version>2.4.0</json.unit.version>
+        <mockito.version>2.26.0</mockito.version>
+        <equalsverifier.version>3.1.8</equalsverifier.version>
+        <json.unit.version>2.6.1</json.unit.version>
         <restassured.version>3.3.0</restassured.version>
     </properties>
 
@@ -320,6 +332,25 @@
                             <phase>verify</phase>
                             <goals>
                                 <goal>enforce</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.owasp</groupId>
+                    <artifactId>dependency-check-maven</artifactId>
+                    <version>${dependency-check.plugin.version}</version>
+                    <configuration>
+                        <format>ALL</format>
+                        <cveValidForHours>24</cveValidForHours>
+                        <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>none</phase>
+                            <goals>
+                                <goal>check</goal>
                             </goals>
                         </execution>
                     </executions>
