--- a/jboss-eap-7.1/pom.xml
+++ b/jboss-eap-7.1/pom.xml
@@ -7,7 +7,6 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>ch.schlau.wurzeln.root</groupId>
     <artifactId>jboss-eap-7.1</artifactId>
     <packaging>pom</packaging>
 
@@ -20,14 +19,34 @@
 
         <!-- latest EE7 spec with JBoss additions, from the jboss-eap-javaee7-7.1.x.GA.pom /bom below -->
         <!-- see https://github.com/jboss/jboss-javaee-specs/commits/master -->
-        <jboss-javaee-7.0.version>1.1.0.Final-redhat-4</jboss-javaee-7.0.version>
+        <jboss-javaee-7.0.version>1.1.0.Final-redhat-5</jboss-javaee-7.0.version>
 
         <!-- latest JBoss EAP 7 dependencies -->
         <!-- see https://mvnrepository.com/artifact/org.jboss.bom/jboss-eap-javaee7 -->
         <!-- and https://access.redhat.com/documentation/en-us/red_hat_jboss_enterprise_application_platform/7.1/html-single/development_guide/#manage_project_dependencies -->
-        <jboss-eap.bom.version>7.1.5.GA</jboss-eap.bom.version>
+        <jboss-eap.bom.version>7.1.6.GA</jboss-eap.bom.version>
 
-        <!-- Artifact versions provided by JBoss EAP 7.1.5 -->
+        <!-- Java EE modules that were removed from Java SE after Java 8 -->
+        <!-- (see http://openjdk.java.net/jeps/320) -->
+        <javax.jws.version>1.0.0.MR1-redhat-8</javax.jws.version>
+        <javax.activation.version>1.1.1.redhat-5</javax.activation.version>
+        <javax.xml.bind.groupId>org.jboss.spec.javax.xml.bind</javax.xml.bind.groupId>
+        <javax.xml.bind.artifactId>jboss-jaxb-api_2.2_spec</javax.xml.bind.artifactId>
+        <javax.xml.bind.version>1.0.4.Final-redhat-4</javax.xml.bind.version>
+        <javax.xml.ws.groupId>org.jboss.spec.javax.xml.ws</javax.xml.ws.groupId>
+        <javax.xml.ws.artifactId>jboss-jaxws-api_2.2_spec</javax.xml.ws.artifactId>
+        <javax.xml.ws.version>2.0.4.Final-redhat-1</javax.xml.ws.version>
+        <javax.xml.soap.groupId>org.jboss.spec.javax.xml.soap</javax.xml.soap.groupId>
+        <javax.xml.soap.artifactId>jboss-saaj-api_1.3_spec</javax.xml.soap.artifactId>
+        <javax.xml.soap.version>1.0.4.Final-redhat-1</javax.xml.soap.version>
+        <javax.annotation.groupId>org.jboss.spec.javax.annotation</javax.annotation.groupId>
+        <javax.annotation.artifactId>jboss-annotations-api_1.2_spec</javax.annotation.artifactId>
+        <javax.annotation.version>1.0.0.Final-redhat-1</javax.annotation.version>
+        <javax.transaction.groupId>org.jboss.spec.javax.transaction</javax.transaction.groupId>
+        <javax.transaction.artifactId>jboss-transaction-api_1.2_spec</javax.transaction.artifactId>
+        <javax.transaction.version>1.0.1.Final-redhat-1</javax.transaction.version>
+
+        <!-- Artifact versions provided by JBoss EAP 7.1.6 -->
         <!-- (see BOM and jboss-eap-7.1/modules/system/layers/base/.overlays/layer-base-jboss-eap-7.1.x.CP) -->
         <resteasy.version>3.0.26.Final-redhat-1</resteasy.version>
         <!-- the API for JSON-P (javax.json:javax.json-api) is included in javax.json-1.0.4.redhat-1.jar -->
@@ -36,15 +55,15 @@
         <!-- note: pay attention if you're using infinispan-jcache, there's no xxx-redhat-1 version of it -->
         <infinispan.version>8.2.11.Final-redhat-1</infinispan.version>
         <woodstox.version>5.0.3.redhat-1</woodstox.version>
-        <hibernate.version>5.1.16.Final-redhat-00001</hibernate.version>
+        <hibernate.version>5.1.17.Final-redhat-00001</hibernate.version>
         <javax.activation.version>1.1.1.redhat-5</javax.activation.version>
 
         <!-- Hibernate 5.1.1.Final is the reference implementation for Bean Validation 1.1 (EE7) -->
-        <!-- JBoss EAP 7.1.5 uses Hibernate Validator 5.3.5.Final -->
+        <!-- JBoss EAP 7.1.6 uses Hibernate Validator 5.3.5.Final -->
         <javax.validation.version>1.1.0.Final-redhat-1</javax.validation.version>
         <hibernate.validator.version>5.3.5.Final-redhat-2</hibernate.validator.version>
 
-        <!-- JBoss EAP 7.1.5 uses Weld 2.4.7.Final-redhat-1 (corresponding to CDI 1.2) -->
+        <!-- JBoss EAP 7.1.6 uses Weld 2.4.7.Final-redhat-1 (corresponding to CDI 1.2) -->
         <javax.inject.version>1.0.0.redhat-6</javax.inject.version>
         <weld.version>2.4.7.Final</weld.version>
 
@@ -83,7 +102,7 @@
             <!-- this is not in the BOM -->
             <dependency>
                 <groupId>org.codehaus.woodstox</groupId>
-                <artifactId>woodstox-core-asl</artifactId>
+                <artifactId>woodstox-core</artifactId>
                 <version>${woodstox.version}</version>
                 <scope>provided</scope>
             </dependency>
@@ -171,6 +190,36 @@
                     <groupId>javax.validation</groupId>
                     <artifactId>validation-api</artifactId>
                     <version>${javax.validation.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.xml.bind.groupId}</groupId>
+                    <artifactId>${javax.xml.bind.artifactId}</artifactId>
+                    <version>${javax.xml.bind.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.xml.ws.groupId}</groupId>
+                    <artifactId>${javax.xml.ws.artifactId}</artifactId>
+                    <version>${javax.xml.ws.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.xml.soap.groupId}</groupId>
+                    <artifactId>${javax.xml.soap.artifactId}</artifactId>
+                    <version>${javax.xml.soap.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.annotation.groupId}</groupId>
+                    <artifactId>${javax.annotation.artifactId}</artifactId>
+                    <version>${javax.annotation.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.transaction.groupId}</groupId>
+                    <artifactId>${javax.transaction.artifactId}</artifactId>
+                    <version>${javax.transaction.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>javax.jws</groupId>
+                    <artifactId>jsr181-api</artifactId>
+                    <version>${javax.jws.version}</version>
                 </dependency>
             </dependencies>
         </profile>
