--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
         <module>thorntail-2.2</module>
         <module>thorntail-2.3</module>
         <module>thorntail-2.4</module>
-        <module>wildfly-14</module>
         <module>wildfly-15</module>
         <module>wildfly-16</module>
+        <module>wildfly-17</module>
         <module>update-checker</module>
     </modules>
 
@@ -39,16 +39,29 @@
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
-        <!-- and are not part (yet) of the Application Servers -->
-        <!-- For JAX-B see https://en.wikipedia.org/wiki/Java_Architecture_for_XML_Binding -->
-        <!-- and https://stackoverflow.com/a/43574427/3686 -->
-        <javax.jaxb.version>2.2.11</javax.jaxb.version>
-        <!-- javax.activation is overridden for the EAP JBosses -->
+        <!-- The versions here are the latest individual version, some servers override them, -->
+        <!-- in some cases with different artifacts (that's why group/artifact are variable) -->
+        <javax.jaxb.version>2.3.1</javax.jaxb.version>
+        <javax.jws.version>1.0-MR1</javax.jws.version>
+        <javax.soap-api.version>1.4.0</javax.soap-api.version>
         <javax.activation.version>1.1.1</javax.activation.version>
-        <!-- Commons Annotations latest version (note: EE7 => 1.2, EE8 => 1.3.x) -->
-        <!-- When using a JBoss EAP you can use the specific artifact from the BOM: -->
-        <!-- 'org.jboss.spec.javax.annotation:jboss-annotations-api_1.2_spec' (or 1.3) -->
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <javax.transaction-api.version>1.3</javax.transaction-api.version>
+        <javax.xml.bind.groupId>javax.xml.bind</javax.xml.bind.groupId>
+        <javax.xml.bind.artifactId>jaxb-api</javax.xml.bind.artifactId>
+        <javax.xml.bind.version>${javax.jaxb.version}</javax.xml.bind.version>
+        <javax.xml.ws.groupId>javax.xml.ws</javax.xml.ws.groupId>
+        <javax.xml.ws.artifactId>jaxws-api</javax.xml.ws.artifactId>
+        <javax.xml.ws.version>${javax.jaxb.version}</javax.xml.ws.version>
+        <javax.xml.soap.groupId>javax.xml.soap</javax.xml.soap.groupId>
+        <javax.xml.soap.artifactId>javax.xml.soap-api</javax.xml.soap.artifactId>
+        <javax.xml.soap.version>${javax.soap-api.version}</javax.xml.soap.version>
+        <javax.annotation.groupId>javax.annotation</javax.annotation.groupId>
+        <javax.annotation.artifactId>javax.annotation-api</javax.annotation.artifactId>
+        <javax.annotation.version>${javax.annotation-api.version}</javax.annotation.version>
+        <javax.transaction.groupId>javax.transaction</javax.transaction.groupId>
+        <javax.transaction.artifactId>javax.transaction-api</javax.transaction.artifactId>
+        <javax.transaction.version>${javax.transaction-api.version}</javax.transaction.version>
 
         <!-- prevent javadoc failures in JDK 8 -->
         <additionalparam>-Xdoclint:none</additionalparam>
@@ -63,9 +76,9 @@
         <!-- non-apache maven plugin versions -->
         <asciidoctor.plugin.version>1.5.8</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.0.0</build-helper.plugin.version>
-        <dependency-check.plugin.version>5.0.0-M2</dependency-check.plugin.version>
-        <docker.plugin.version>0.29.0</docker.plugin.version>
-        <jacoco.plugin.version>0.8.3</jacoco.plugin.version>
+        <dependency-check.plugin.version>5.1.0</dependency-check.plugin.version>
+        <docker.plugin.version>0.30.0</docker.plugin.version>
+        <jacoco.plugin.version>0.8.4</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
         <wildfly.plugin.version>2.0.1.Final</wildfly.plugin.version>
@@ -73,34 +86,34 @@
         <!-- apache maven plugin versions (in alphabetical order) -->
         <maven.assembly.plugin.version>3.1.1</maven.assembly.plugin.version>
         <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
-        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.dependency.plugin.version>3.1.1</maven.dependency.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.0.1</maven.ear.plugin.version>
         <maven.ejb.plugin.version>3.0.1</maven.ejb.plugin.version>
         <maven.enforcer.plugin.version>3.0.0-M2</maven.enforcer.plugin.version>
-        <maven.failsafe.plugin.version>2.22.1</maven.failsafe.plugin.version>
+        <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
         <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
-        <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
+        <maven.jar.plugin.version>3.1.2</maven.jar.plugin.version>
+        <maven.javadoc.plugin.version>3.1.1</maven.javadoc.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
         <maven.scm.plugin.version>1.11.2</maven.scm.plugin.version>
         <maven.shade.plugin.version>3.2.1</maven.shade.plugin.version>
         <maven.site.plugin.version>3.7.1</maven.site.plugin.version>
-        <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
+        <maven.source.plugin.version>3.1.0</maven.source.plugin.version>
         <maven.surefire.plugin.version>${maven.failsafe.plugin.version}</maven.surefire.plugin.version>
-        <maven.war.plugin.version>3.2.2</maven.war.plugin.version>
+        <maven.war.plugin.version>3.2.3</maven.war.plugin.version>
 
         <!-- artifact versions -->
-        <apache.commons.lang3.version>3.8.1</apache.commons.lang3.version>
+        <apache.commons.lang3.version>3.9</apache.commons.lang3.version>
         <logback.version>1.2.3</logback.version>
-        <lombok.version>1.18.6</lombok.version>
+        <lombok.version>1.18.8</lombok.version>
         <slf4j.version>1.7.26</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.9.8</jackson-2-version>
+        <jackson-2-version>2.9.9</jackson-2-version>
 
         <!-- Java Expression Language (JSR 341) generally defined; the application servers -->
         <!-- have slightly different version strings (3.0.1-b08-jbossorg-1 and 3.0.1.b08-redhat-1), -->
@@ -108,19 +121,59 @@
         <javax.el.version>3.0.1-b11</javax.el.version>
 
         <!-- testing and static analysis -->
-        <junit.platform.version>1.4.2</junit.platform.version>
-        <junit.jupiter.version>5.4.2</junit.jupiter.version>
-        <hamcrest.version>2.0.0.0</hamcrest.version>
-        <mockito.version>2.26.0</mockito.version>
-        <equalsverifier.version>3.1.8</equalsverifier.version>
-        <json.unit.version>2.6.1</json.unit.version>
-        <restassured.version>3.3.0</restassured.version>
+        <junit.platform.version>1.5.0</junit.platform.version>
+        <junit.jupiter.version>5.5.0</junit.jupiter.version>
+        <hamcrest.version>2.1</hamcrest.version>
+        <mockito.version>3.0.0</mockito.version>
+        <byte-buddy.version>1.9.14</byte-buddy.version>
+        <equalsverifier.version>3.1.9</equalsverifier.version>
+        <json.unit.version>2.7.0</json.unit.version>
+        <restassured.version>4.0.0</restassured.version>
+        <wiremock.version>2.23.2</wiremock.version>
     </properties>
 
     <!-- no dependencies in this POM, as dependencies from a parent POM can't be excluded -->
 
     <dependencyManagement>
         <dependencies>
+            <!-- Java EE modules removed from Java SE in Java 11 -->
+            <!-- Usually there is also a dependencyManagement entry in the AS pom -->
+            <dependency>
+                <groupId>${javax.xml.bind.groupId}</groupId>
+                <artifactId>${javax.xml.bind.artifactId}</artifactId>
+                <version>${javax.xml.bind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${javax.xml.ws.groupId}</groupId>
+                <artifactId>${javax.xml.ws.artifactId}</artifactId>
+                <version>${javax.xml.ws.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${javax.xml.soap.groupId}</groupId>
+                <artifactId>${javax.xml.soap.artifactId}</artifactId>
+                <version>${javax.xml.soap.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${javax.annotation.groupId}</groupId>
+                <artifactId>${javax.annotation.artifactId}</artifactId>
+                <version>${javax.annotation.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${javax.transaction.groupId}</groupId>
+                <artifactId>${javax.transaction.artifactId}</artifactId>
+                <version>${javax.transaction.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.jws</groupId>
+                <artifactId>jsr181-api</artifactId>
+                <version>${javax.jws.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>activation</artifactId>
+                <version>${javax.activation.version}</version>
+            </dependency>
+
             <!-- utils -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -164,7 +217,7 @@
             <!-- junit 5 no longer includes hamcrest -->
             <dependency>
                 <groupId>org.hamcrest</groupId>
-                <artifactId>java-hamcrest</artifactId>
+                <artifactId>hamcrest</artifactId>
                 <version>${hamcrest.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -179,6 +232,14 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-junit-jupiter</artifactId>
                 <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <!-- must have a managed byte-buddy test-dependency because wildfly-17 manages it -->
+                <!-- as well with a quite old version (breaking some mockito tests) -->
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${byte-buddy.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -375,6 +436,11 @@
                         <configuration>
                             <!-- starting with Java 9 javac should be called with -release N -->
                             <release>${java.release}</release>
+
+                            <!-- forbid the plugin to use the javax.tools Compiler API, because then sometimes -->
+                            <!-- you get an AssertionError in JavaCompiler.readSourceFile instead of a proper error message -->
+                            <!-- see https://issues.apache.org/jira/browse/MCOMPILER-346 -->
+                            <forceJavacCompilerUse>true</forceJavacCompilerUse>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -407,28 +473,12 @@
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
-            <!-- Modules removed in Java 11 with JEP320 -->
-            <dependencies>
-                <dependency>
-                    <groupId>javax.xml.bind</groupId>
-                    <artifactId>jaxb-api</artifactId>
-                    <version>${javax.jaxb.version}</version>
-                </dependency>
-            </dependencies>
-            <!-- see each module POM for other dependencies to check -->
-
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
                         <version>${maven.dependency.plugin.version}</version>
-                        <configuration>
-                            <ignoredUnusedDeclaredDependencies>
-                                <!-- these are declared to check that the dependency exists -->
-                                <ignoredUnusedDeclaredDependency>javax.xml.bind</ignoredUnusedDeclaredDependency>
-                            </ignoredUnusedDeclaredDependencies>
-                        </configuration>
                     </plugin>
 
                     <plugin>
