--- a/wildfly-17/pom.xml
+++ b/wildfly-17/pom.xml
@@ -7,8 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>ch.schlau.wurzeln.root</groupId>
-    <artifactId>wildfly-14</artifactId>
+    <artifactId>wildfly-17</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -18,42 +17,67 @@
         <javax.javaee-api.version>8.0</javax.javaee-api.version>
 
         <!-- EE8 spec with JBoss additions, from the Wildfly BOM -->
-        <jboss-javaee-8.0.version>1.0.0.Alpha1</jboss-javaee-8.0.version>
+        <jboss-javaee-8.0.version>1.0.3.Final</jboss-javaee-8.0.version>
 
-        <!-- latest Wildfly 14 dependencies -->
-        <wildfly.bom.version>14.0.0.Final</wildfly.bom.version>
+        <!-- latest Wildfly 17 dependencies -->
+        <wildfly.bom.version>17.0.0.Final</wildfly.bom.version>
 
-        <!-- MicroProfile Standard Versions provided by Wildfly 14 -->
+        <!-- Java EE modules that were removed from Java SE after Java 8 -->
+        <!-- (see http://openjdk.java.net/jeps/320) -->
+        <javax.xml.bind.groupId>org.jboss.spec.javax.xml.bind</javax.xml.bind.groupId>
+        <javax.xml.bind.artifactId>jboss-jaxb-api_2.3_spec</javax.xml.bind.artifactId>
+        <javax.xml.bind.version>1.0.1.Final</javax.xml.bind.version>
+        <javax.xml.ws.groupId>org.jboss.spec.javax.xml.ws</javax.xml.ws.groupId>
+        <javax.xml.ws.artifactId>jboss-jaxws-api_2.3_spec</javax.xml.ws.artifactId>
+        <javax.xml.ws.version>1.0.0.Final</javax.xml.ws.version>
+        <javax.xml.soap.groupId>org.jboss.spec.javax.xml.soap</javax.xml.soap.groupId>
+        <javax.xml.soap.artifactId>jboss-saaj-api_1.3_spec</javax.xml.soap.artifactId>
+        <javax.xml.soap.version>1.0.6.Final</javax.xml.soap.version>
+        <javax.annotation.groupId>org.jboss.spec.javax.annotation</javax.annotation.groupId>
+        <javax.annotation.artifactId>jboss-annotations-api_1.3_spec</javax.annotation.artifactId>
+        <javax.annotation.version>1.0.1.Final</javax.annotation.version>
+        <javax.transaction.groupId>org.jboss.spec.javax.transaction</javax.transaction.groupId>
+        <javax.transaction.artifactId>jboss-transaction-api_1.2_spec</javax.transaction.artifactId>
+        <javax.transaction.version>1.1.1.Final</javax.transaction.version>
+
+        <!-- MicroProfile Standard Versions provided by Wildfly 17 -->
         <mp.config.version>1.3</mp.config.version>
         <mp.health.version>1.0</mp.health.version>
+        <mp.metrics.version>1.1</mp.metrics.version>
         <mp.opentracing.version>1.1</mp.opentracing.version>
-        <smallrye.config.version>1.3.3</smallrye.config.version>
+        <mp.rest-client.version>1.0.1</mp.rest-client.version>
+        <smallrye.config.version>1.3.4</smallrye.config.version>
         <smallrye.health.version>1.0.2</smallrye.health.version>
+        <smallrye.metrics.version>1.1.3</smallrye.metrics.version>
         <smallrye.opentracing.version>1.1.1</smallrye.opentracing.version>
+        <!-- wildfly 17 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
-        <!-- Artifact versions provided by Wildfly 14.0.0.Final -->
-        <!-- (see wildfly-14.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
-        <resteasy.version>3.6.1.Final</resteasy.version>
+        <!-- Artifact versions provided by Wildfly 17.0.0.Final -->
+        <!-- (see wildfly-17.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
+        <resteasy.version>3.7.0.Final</resteasy.version>
+        <!-- note that wildfly bundles the javax packages, but yasson depends on the jakarta.json ones -->
+        <jakarta.json.version>1.1.5</jakarta.json.version>
         <javax.json.version>1.1.2</javax.json.version>
         <glassfish.javax.json.version>1.1.2</glassfish.javax.json.version>
+        <jakarta.json.bind.version>1.0.1</jakarta.json.bind.version>
         <javax.json.bind.version>1.0</javax.json.bind.version>
-        <yasson.version>1.0.1</yasson.version>
+        <yasson.version>1.0.3</yasson.version>
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.9.5</jackson-2-version>
-        <infinispan.version>9.3.1.Final</infinispan.version>
+        <jackson-2-version>2.9.9</jackson-2-version>
+        <infinispan.version>9.4.14.Final</infinispan.version>
         <woodstox.version>5.0.3</woodstox.version>
-        <hibernate.version>5.3.6.Final</hibernate.version>
+        <hibernate.version>5.3.10.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
-        <!-- Wildfly 14.0.0.Final uses Hibernate Validator 6.0.13.Final -->
+        <!-- Wildfly 17.0.0.Final uses Hibernate Validator 6.0.16.Final -->
         <javax.validation.version>2.0.1.Final</javax.validation.version>
-        <hibernate.validator.version>6.0.13.Final</hibernate.validator.version>
+        <hibernate.validator.version>6.0.16.Final</hibernate.validator.version>
 
-        <!-- Wildfly 14.0.0.Final uses Weld 3.0.5 (corresponding to CDI 2.0) -->
+        <!-- Wildfly 17.0.0.Final uses Weld 3.1.1 (corresponding to CDI 2.0) -->
         <javax.inject.version>1</javax.inject.version>
-        <weld.version>3.0.5.Final</weld.version>
+        <weld.version>3.1.1.Final</weld.version>
 
-        <!-- Latest EE7 Wildfly plugin -->
+        <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
     </properties>
 
@@ -88,7 +112,7 @@
             <!-- this is not in the BOM -->
             <dependency>
                 <groupId>org.codehaus.woodstox</groupId>
-                <artifactId>woodstox-core-asl</artifactId>
+                <artifactId>woodstox-core</artifactId>
                 <version>${woodstox.version}</version>
                 <scope>provided</scope>
             </dependency>
@@ -115,9 +139,19 @@
                     <version>${mp.health.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>org.eclipse.microprofile.metrics</groupId>
+                    <artifactId>microprofile-metrics-api</artifactId>
+                    <version>${mp.metrics.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>org.eclipse.microprofile.opentracing</groupId>
                     <artifactId>microprofile-opentracing-api</artifactId>
                     <version>${mp.opentracing.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.eclipse.microprofile.rest.client</groupId>
+                    <artifactId>microprofile-rest-client-api</artifactId>
+                    <version>${mp.rest-client.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -125,7 +159,7 @@
                     <version>${smallrye.config.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-14 -->
+                            <!-- avoid Dependency convergence error (wildfly-17 -->
                             <!-- has javax.annotation-api:1.3.2, smallrye-config only 1.2) -->
                             <groupId>javax.annotation</groupId>
                             <artifactId>javax.annotation-api</artifactId>
@@ -139,6 +173,11 @@
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
+                    <artifactId>smallrye-metrics</artifactId>
+                    <version>${smallrye.metrics.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-opentracing</artifactId>
                     <version>${smallrye.opentracing.version}</version>
                 </dependency>
@@ -146,6 +185,11 @@
                     <groupId>org.jboss.resteasy</groupId>
                     <artifactId>resteasy-client</artifactId>
                     <version>${resteasy.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>jakarta.json</groupId>
+                    <artifactId>jakarta.json-api</artifactId>
+                    <version>${jakarta.json.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>javax.json</groupId>
@@ -161,6 +205,11 @@
                     <groupId>javax.json.bind</groupId>
                     <artifactId>javax.json.bind-api</artifactId>
                     <version>${javax.json.bind.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>jakarta.json.bind</groupId>
+                    <artifactId>jakarta.json.bind-api</artifactId>
+                    <version>${jakarta.json.bind.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse</groupId>
@@ -181,14 +230,6 @@
                     <groupId>org.infinispan</groupId>
                     <artifactId>infinispan-core</artifactId>
                     <version>${infinispan.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (resteasy-jaxrs:3.6.1.Final -->
-                            <!-- has reactive-streams:1.0.2, infinispan-core only 1.0.1) -->
-                            <groupId>org.reactivestreams</groupId>
-                            <artifactId>reactive-streams</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
@@ -196,7 +237,7 @@
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
-                    <!-- even though woodstox-core is in wildfly-14.0.0.Final/modules/system/layers/base/org/codehaus/woodstox, -->
+                    <!-- even though woodstox-core is in wildfly-17.0.0.Final/modules/system/layers/base/org/codehaus/woodstox, -->
                     <!-- the group id is com.fasterxml.woodstox -->
                     <groupId>com.fasterxml.woodstox</groupId>
                     <artifactId>woodstox-core</artifactId>
@@ -228,11 +269,6 @@
                     <version>${javax.activation.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.annotation</groupId>
-                    <artifactId>javax.annotation-api</artifactId>
-                    <version>${javax.annotation-api.version}</version>
-                </dependency>
-                <dependency>
                     <groupId>javax.inject</groupId>
                     <artifactId>javax.inject</artifactId>
                     <version>${javax.inject.version}</version>
@@ -241,6 +277,36 @@
                     <groupId>javax.validation</groupId>
                     <artifactId>validation-api</artifactId>
                     <version>${javax.validation.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.xml.bind.groupId}</groupId>
+                    <artifactId>${javax.xml.bind.artifactId}</artifactId>
+                    <version>${javax.xml.bind.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.xml.ws.groupId}</groupId>
+                    <artifactId>${javax.xml.ws.artifactId}</artifactId>
+                    <version>${javax.xml.ws.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.xml.soap.groupId}</groupId>
+                    <artifactId>${javax.xml.soap.artifactId}</artifactId>
+                    <version>${javax.xml.soap.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.annotation.groupId}</groupId>
+                    <artifactId>${javax.annotation.artifactId}</artifactId>
+                    <version>${javax.annotation.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>${javax.transaction.groupId}</groupId>
+                    <artifactId>${javax.transaction.artifactId}</artifactId>
+                    <version>${javax.transaction.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>javax.jws</groupId>
+                    <artifactId>jsr181-api</artifactId>
+                    <version>${javax.jws.version}</version>
                 </dependency>
             </dependencies>
         </profile>
