--- a/pom.xml
+++ b/pom.xml
@@ -76,10 +76,12 @@
         <!-- non-apache maven plugin versions -->
         <asciidoctor.plugin.version>1.5.8</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.0.0</build-helper.plugin.version>
-        <dependency-check.plugin.version>5.1.0</dependency-check.plugin.version>
-        <docker.plugin.version>0.30.0</docker.plugin.version>
+        <dependency-check.plugin.version>5.2.1</dependency-check.plugin.version>
+        <docker.plugin.version>0.31.0</docker.plugin.version>
         <jacoco.plugin.version>0.8.4</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
+        <openapi-generator.plugin.version>4.1.0</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.10</swagger-codegen.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
         <wildfly.plugin.version>2.0.1.Final</wildfly.plugin.version>
 
@@ -100,7 +102,7 @@
         <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
         <maven.scm.plugin.version>1.11.2</maven.scm.plugin.version>
         <maven.shade.plugin.version>3.2.1</maven.shade.plugin.version>
-        <maven.site.plugin.version>3.7.1</maven.site.plugin.version>
+        <maven.site.plugin.version>3.8.2</maven.site.plugin.version>
         <maven.source.plugin.version>3.1.0</maven.source.plugin.version>
         <maven.surefire.plugin.version>${maven.failsafe.plugin.version}</maven.surefire.plugin.version>
         <maven.war.plugin.version>3.2.3</maven.war.plugin.version>
@@ -109,7 +111,7 @@
         <apache.commons.lang3.version>3.9</apache.commons.lang3.version>
         <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.8</lombok.version>
-        <slf4j.version>1.7.26</slf4j.version>
+        <slf4j.version>1.7.28</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
@@ -121,15 +123,15 @@
         <javax.el.version>3.0.1-b11</javax.el.version>
 
         <!-- testing and static analysis -->
-        <junit.platform.version>1.5.0</junit.platform.version>
-        <junit.jupiter.version>5.5.0</junit.jupiter.version>
+        <junit.platform.version>1.5.1</junit.platform.version>
+        <junit.jupiter.version>5.5.1</junit.jupiter.version>
         <hamcrest.version>2.1</hamcrest.version>
         <mockito.version>3.0.0</mockito.version>
-        <byte-buddy.version>1.9.14</byte-buddy.version>
+        <byte-buddy.version>1.10.1</byte-buddy.version>
         <equalsverifier.version>3.1.9</equalsverifier.version>
-        <json.unit.version>2.7.0</json.unit.version>
+        <json.unit.version>2.8.0</json.unit.version>
         <restassured.version>4.0.0</restassured.version>
-        <wiremock.version>2.23.2</wiremock.version>
+        <wiremock.version>2.24.1</wiremock.version>
     </properties>
 
     <!-- no dependencies in this POM, as dependencies from a parent POM can't be excluded -->
