Update IJ config

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Snap.*.trc
 
 # IntelliJ IDEA
 **/.idea/artifacts/
+**/.idea/codeStyles/
 **/.idea/dictionaries/
 **/.idea/kotlinc.xml
 **/.idea/libraries/
