--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>wildfly-16</module>
         <module>wildfly-17</module>
         <module>wildfly-18</module>
+        <module>wildfly-19</module>
         <module>update-checker</module>
     </modules>
 
@@ -47,7 +48,7 @@
         <javax.jws.version>1.0-MR1</javax.jws.version>
         <javax.soap-api.version>1.4.0</javax.soap-api.version>
         <javax.activation.version>1.1.1</javax.activation.version>
-        <jakarta.activation.version>1.2.1</jakarta.activation.version>
+        <jakarta.activation.version>1.2.2</jakarta.activation.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <javax.transaction-api.version>1.3</javax.transaction-api.version>
         <javax.xml.bind.groupId>javax.xml.bind</javax.xml.bind.groupId>
@@ -78,13 +79,13 @@
 
         <!-- non-apache maven plugin versions -->
         <asciidoctor.plugin.version>1.5.8</asciidoctor.plugin.version>
-        <build-helper.plugin.version>3.0.0</build-helper.plugin.version>
-        <dependency-check.plugin.version>5.2.4</dependency-check.plugin.version>
-        <docker.plugin.version>0.31.0</docker.plugin.version>
+        <build-helper.plugin.version>3.1.0</build-helper.plugin.version>
+        <dependency-check.plugin.version>5.3.2</dependency-check.plugin.version>
+        <docker.plugin.version>0.33.0</docker.plugin.version>
         <jacoco.plugin.version>0.8.5</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>4.2.2</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.15</swagger-codegen.plugin.version>
+        <openapi-generator.plugin.version>4.3.0</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.19</swagger-codegen.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
         <wildfly.plugin.version>2.0.2.Final</wildfly.plugin.version>
 
@@ -92,7 +93,7 @@
         <maven.assembly.plugin.version>3.2.0</maven.assembly.plugin.version>
         <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
-        <maven.dependency.plugin.version>3.1.1</maven.dependency.plugin.version>
+        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.0.2</maven.ear.plugin.version>
         <maven.ejb.plugin.version>3.0.1</maven.ejb.plugin.version>
@@ -100,26 +101,31 @@
         <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
         <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
         <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.1.1</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
         <maven.scm.plugin.version>1.11.2</maven.scm.plugin.version>
-        <maven.shade.plugin.version>3.2.1</maven.shade.plugin.version>
-        <maven.site.plugin.version>3.8.2</maven.site.plugin.version>
+        <maven.shade.plugin.version>3.2.3</maven.shade.plugin.version>
+        <maven.site.plugin.version>3.9.0</maven.site.plugin.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
         <maven.surefire.plugin.version>${maven.failsafe.plugin.version}</maven.surefire.plugin.version>
         <maven.war.plugin.version>3.2.3</maven.war.plugin.version>
 
         <!-- artifact versions -->
-        <apache.commons.lang3.version>3.9</apache.commons.lang3.version>
+        <apache.commons.lang3.version>3.10</apache.commons.lang3.version>
         <logback.version>1.2.3</logback.version>
-        <lombok.version>1.18.10</lombok.version>
+        <lombok.version>1.18.12</lombok.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <slf4j.version>1.7.30</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.10.2</jackson-2-version>
+        <jackson-2-version>2.10.3</jackson-2-version>
+        <jackson-bom.version>2.10.3</jackson-bom.version>
+
+        <!-- latest version for projects independent of an application server (AS) -->
+        <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
+        <apache.httpclient.version>4.5.12</apache.httpclient.version>
 
         <!-- Java Expression Language (JSR 341) generally defined; the application servers -->
         <!-- have slightly different version strings (3.0.1-b08-jbossorg-1 and 3.0.1.b08-redhat-1), -->
@@ -129,15 +135,15 @@
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.2.0</opentest4j.version>
-        <junit.platform.version>1.5.2</junit.platform.version>
-        <junit.jupiter.version>5.5.2</junit.jupiter.version>
+        <junit.platform.version>1.6.2</junit.platform.version>
+        <junit.jupiter.version>5.6.2</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>3.2.4</mockito.version>
-        <byte-buddy.version>1.10.6</byte-buddy.version>
-        <equalsverifier.version>3.1.11</equalsverifier.version>
-        <json.unit.version>2.11.1</json.unit.version>
-        <restassured.version>4.1.2</restassured.version>
-        <wiremock.version>2.25.1</wiremock.version>
+        <mockito.version>3.3.3</mockito.version>
+        <byte-buddy.version>1.10.9</byte-buddy.version>
+        <equalsverifier.version>3.1.13</equalsverifier.version>
+        <json.unit.version>2.17.0</json.unit.version>
+        <restassured.version>4.3.0</restassured.version>
+        <wiremock.version>2.26.3</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
         <!-- Simulating this variable depending on the OS (see also the profiles below overriding it) -->
@@ -241,7 +247,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson</groupId>
                 <artifactId>jackson-bom</artifactId>
-                <version>${jackson-2-version}</version>
+                <version>${jackson-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -254,6 +260,21 @@
                 <groupId>org.glassfish</groupId>
                 <artifactId>jakarta.el</artifactId>
                 <version>${jakarta.el.version}</version>
+            </dependency>
+            <dependency>
+                <!-- must manage the httpclient to avoid dependency convergence errors -->
+                <!-- between rest-assured and wiremock. And you must pay attention because -->
+                <!-- the httpclient is also needed by resteasy provided by EAP/Wildfly etc. -->
+                <!-- in scope runtime. If you define the scope here it might affect your packaging! -->
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${apache.httpclient.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>commons-logging</artifactId>
+                        <groupId>commons-logging</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- testing -->
@@ -298,6 +319,20 @@
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest</artifactId>
+                <version>${hamcrest.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <!-- some testing libraries depend on `hamcrest-core` instead of `hamcrest` -->
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-core</artifactId>
+                <version>${hamcrest.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <!-- some testing libraries depend on `hamcrest-library` instead of `hamcrest` -->
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-library</artifactId>
                 <version>${hamcrest.version}</version>
                 <scope>test</scope>
             </dependency>
