--- a/wildfly-19/pom.xml
+++ b/wildfly-19/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>wildfly-18</artifactId>
+    <artifactId>wildfly-19</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -17,10 +17,11 @@
         <jakarta.jakartaee-api.version>8.0.0</jakarta.jakartaee-api.version>
 
         <!-- EE8 spec with JBoss additions -->
+        <!-- don't know where to find this version, could also be 1.0.1.Final -->
         <jboss-jakartaee-8.0.version>1.0.0.Final</jboss-jakartaee-8.0.version>
 
-        <!-- latest Wildfly 18 dependencies -->
-        <wildfly.bom.version>18.0.1.Final</wildfly.bom.version>
+        <!-- latest Wildfly 19 dependencies -->
+        <wildfly.bom.version>19.0.1.Final</wildfly.bom.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -35,7 +36,7 @@
         <javax.xml.soap.groupId>org.jboss.spec.javax.xml.soap</javax.xml.soap.groupId>
         <javax.xml.soap.artifactId>jboss-saaj-api_1.4_spec</javax.xml.soap.artifactId>
         <!--version.org.jboss.spec.javax.xml.soap-->
-        <javax.xml.soap.version>1.0.0.Final</javax.xml.soap.version>
+        <javax.xml.soap.version>1.0.2.Final</javax.xml.soap.version>
         <javax.annotation.groupId>org.jboss.spec.javax.annotation</javax.annotation.groupId>
         <javax.annotation.artifactId>jboss-annotations-api_1.3_spec</javax.annotation.artifactId>
         <!--version.org.jboss.spec.javax.annotation-->
@@ -49,27 +50,33 @@
         <!-- force existing version via dependency management -->
         <jakarta.jws.version>1.1.1</jakarta.jws.version>
 
-        <!-- MicroProfile Standard Versions provided by Wildfly 18 -->
-        <mp.config.version>1.3</mp.config.version>
-        <mp.health.version>2.0.1</mp.health.version>
-        <mp.metrics.version>2.0.2</mp.metrics.version>
-        <mp.opentracing.version>1.3.1</mp.opentracing.version>
-        <mp.rest-client.version>1.3.2</mp.rest-client.version>
-        <smallrye.config.version>1.3.6</smallrye.config.version>
-        <smallrye.health.version>2.0.0</smallrye.health.version>
-        <smallrye.metrics.version>2.1.5</smallrye.metrics.version>
-        <smallrye.opentracing.version>1.3.0</smallrye.opentracing.version>
-        <!-- wildfly 18 is using resteasy-client-microprofile instead of smallrye-rest-client -->
+        <!-- MicroProfile Standard Versions provided by Wildfly 19 -->
+        <mp.config.version>1.4</mp.config.version>
+        <mp.fault-tolerance.version>2.1</mp.fault-tolerance.version>
+        <mp.health.version>2.2</mp.health.version>
+        <mp.jwt.version>1.1.1</mp.jwt.version>
+        <mp.metrics.version>2.3</mp.metrics.version>
+        <mp.openapi.version>1.1.2</mp.openapi.version>
+        <mp.opentracing.version>1.3.3</mp.opentracing.version>
+        <mp.rest-client.version>1.4.0</mp.rest-client.version>
+        <smallrye.config.version>1.6.2</smallrye.config.version>
+        <smallrye.fault-tolerance.version>4.1.1</smallrye.fault-tolerance.version>
+        <smallrye.health.version>2.2.0</smallrye.health.version>
+        <smallrye.jwt.version>2.0.13</smallrye.jwt.version>
+        <smallrye.metrics.version>2.4.0</smallrye.metrics.version>
+        <smallrye.openapi.version>1.1.21</smallrye.openapi.version>
+        <smallrye.opentracing.version>1.3.4</smallrye.opentracing.version>
+        <!-- wildfly 19 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- opentracing tracer implementation -->
         <io.opentracing.version>0.31.0</io.opentracing.version>
         <io.opentracing.contrib-jaxrs.version>0.4.1</io.opentracing.contrib-jaxrs.version>
-        <io.jaegertracing.version>0.34.0</io.jaegertracing.version>
+        <io.jaegertracing.version>0.34.3</io.jaegertracing.version>
 
-        <!-- Artifact versions provided by Wildfly 18.0.1.Final -->
-        <!-- (see wildfly-18.0.1.Final/modules/system/layers/base and Wildfly BOM) -->
-        <resteasy.version>3.9.1.Final</resteasy.version>
-        <apache.httpclient.version>4.5.4</apache.httpclient.version>
+        <!-- Artifact versions provided by Wildfly 19.0.0.Final -->
+        <!-- (see wildfly-19.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
+        <resteasy.version>3.11.0.Final</resteasy.version>
+        <apache.httpclient.version>4.5.11</apache.httpclient.version>
         <!-- note that wildfly provides jakarta.json* in the path modules/system/layers/base/javax/json/* -->
         <jakarta.json.version>1.1.6</jakarta.json.version>
         <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
@@ -77,21 +84,21 @@
         <yasson.version>1.0.5</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.9.10</jackson-2-version>
-        <!-- this BOM has versions 2.9.10 and 2.9.10.1 (jackson-databind) -->
-        <jackson-bom.version>2.9.10.20191020</jackson-bom.version>
+        <jackson-2-version>2.10.1</jackson-2-version>
+        <jackson-bom.version>2.10.1</jackson-bom.version>
 
-        <infinispan.version>9.4.16.Final</infinispan.version>
-        <hibernate.version>5.3.13.Final</hibernate.version>
+        <infinispan.version>9.4.18.Final</infinispan.version>
+        <hibernate.version>5.3.15.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
-        <!-- Wildfly 18.0.1.Final uses Hibernate Validator 6.0.18.Final -->
+        <!-- Wildfly 19.0.0.Final uses Hibernate Validator 6.0.18.Final -->
         <jakarta.validation.version>2.0.2</jakarta.validation.version>
         <hibernate.validator.version>6.0.18.Final</hibernate.validator.version>
 
-        <!-- Wildfly 18.0.1.Final uses Weld 3.1.2 (corresponding to CDI 2.0) -->
+        <!-- Wildfly 19.0.0.Final uses Weld 3.1.3 (corresponding to CDI 2.0) -->
         <jakarta.inject.version>1.0</jakarta.inject.version>
-        <weld.version>3.1.2.Final</weld.version>
+        <!-- TODO use org.jboss.weld:weld-core-bom -->
+        <weld.version>3.1.3.Final</weld.version>
 
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
@@ -157,12 +164,17 @@
                     <version>${mp.config.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
+                    <artifactId>microprofile-fault-tolerance-api</artifactId>
+                    <version>${mp.fault-tolerance.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>org.eclipse.microprofile.health</groupId>
                     <artifactId>microprofile-health-api</artifactId>
                     <version>${mp.health.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- Dependency convergence error (wildfly-18 -->
+                            <!-- Dependency convergence error (wildfly-19 -->
                             <!-- avoid already excluded dependency) -->
                             <groupId>javax.inject</groupId>
                             <artifactId>javax.inject</artifactId>
@@ -170,9 +182,19 @@
                     </exclusions>
                 </dependency>
                 <dependency>
+                    <groupId>org.eclipse.microprofile.jwt</groupId>
+                    <artifactId>microprofile-jwt-auth-api</artifactId>
+                    <version>${mp.jwt.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>org.eclipse.microprofile.metrics</groupId>
                     <artifactId>microprofile-metrics-api</artifactId>
                     <version>${mp.metrics.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.eclipse.microprofile.openapi</groupId>
+                    <artifactId>microprofile-openapi-api</artifactId>
+                    <version>${mp.openapi.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse.microprofile.opentracing</groupId>
@@ -185,7 +207,7 @@
                     <version>${mp.rest-client.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- Dependency convergence error (wildfly-18 -->
+                            <!-- Dependency convergence error (wildfly-19 -->
                             <!-- avoid already excluded dependency) -->
                             <groupId>javax.inject</groupId>
                             <artifactId>javax.inject</artifactId>
@@ -193,15 +215,26 @@
                     </exclusions>
                 </dependency>
                 <dependency>
-                    <groupId>io.smallrye</groupId>
+                    <groupId>io.smallrye.config</groupId>
                     <artifactId>smallrye-config</artifactId>
                     <version>${smallrye.config.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
+                    <artifactId>smallrye-fault-tolerance</artifactId>
+                    <version>${smallrye.fault-tolerance.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- Dependency convergence error (wildfly-18 -->
+                            <!-- Dependency convergence error (wildfly-19 -->
                             <!-- avoid already excluded dependency) -->
-                            <groupId>javax.inject</groupId>
-                            <artifactId>javax.inject</artifactId>
+                            <groupId>jakarta.annotation</groupId>
+                            <artifactId>jakarta.annotation-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- Dependency convergence error (wildfly-19 -->
+                            <!-- avoid already excluded dependency) -->
+                            <groupId>jakarta.enterprise.concurrent</groupId>
+                            <artifactId>jakarta.enterprise.concurrent-api</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -212,8 +245,34 @@
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
+                    <artifactId>smallrye-jwt</artifactId>
+                    <version>${smallrye.jwt.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (wildfly-19 -->
+                            <!-- has microprofile-config-api:1.4, smallrye-jwt only 1.3) -->
+                            <groupId>org.eclipse.microprofile.config</groupId>
+                            <artifactId>microprofile-config-api</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-metrics</artifactId>
                     <version>${smallrye.metrics.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
+                    <artifactId>smallrye-open-api</artifactId>
+                    <version>${smallrye.openapi.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (wildfly-19 -->
+                            <!-- has microprofile-config-api:1.4, smallrye-open-api only 1.3) -->
+                            <groupId>org.eclipse.microprofile.config</groupId>
+                            <artifactId>microprofile-config-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -221,16 +280,10 @@
                     <version>${smallrye.opentracing.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-18 -->
-                            <!-- has microprofile-opentracing-api:1.3.1, smallrye-opentracing only 1.3) -->
+                            <!-- avoid Dependency convergence error (wildfly-19 -->
+                            <!-- has microprofile-opentracing-api:1.3.3, smallrye-opentracing via opentracing-interceptors only 1.1) -->
                             <groupId>org.eclipse.microprofile.opentracing</groupId>
                             <artifactId>microprofile-opentracing-api</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-18 -->
-                            <!-- has microprofile-rest-client-api:1.3.2, smallrye-opentracing only 1.2.0) -->
-                            <groupId>org.eclipse.microprofile.rest.client</groupId>
-                            <artifactId>microprofile-rest-client-api</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -245,8 +298,8 @@
                     <version>${io.opentracing.contrib-jaxrs.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-18 -->
-                            <!-- has microprofile-opentracing-api:1.3.1, opentracing-jaxrs2 only 1.3) -->
+                            <!-- avoid Dependency convergence error (wildfly-19 -->
+                            <!-- has microprofile-opentracing-api:1.3.3, opentracing-jaxrs2 only 1.3) -->
                             <groupId>org.eclipse.microprofile.opentracing</groupId>
                             <artifactId>microprofile-opentracing-api</artifactId>
                         </exclusion>
@@ -283,7 +336,7 @@
                     <version>${yasson.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-18 -->
+                            <!-- avoid Dependency convergence error (wildfly-19 -->
                             <!-- has org.glassfish:jakarta.json:1.1.6, yasson only 1.1.5) -->
                             <groupId>org.glassfish</groupId>
                             <artifactId>jakarta.json</artifactId>
@@ -312,6 +365,14 @@
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-core</artifactId>
                     <version>${hibernate.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- Dependency convergence error (wildfly-19 -->
+                            <!-- avoid already excluded dependency) -->
+                            <groupId>javax.xml.bind</groupId>
+                            <artifactId>jaxb-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.hibernate.validator</groupId>
