Add POMs for Quarkus 1.3.x and Quarkus 1.4.x
and update Wildfly to 19.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ Snap.*.trc
 **/.idea/codeStyles/
 **/.idea/dictionaries/
 **/.idea/kotlinc.xml
+**/.idea/jarRepositories.xml
 **/.idea/libraries/
 **/.idea/markdown-navigator.xml
 **/.idea/markdown-navigator/
