--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <modules>
         <module>jboss-eap-7.1</module>
         <module>quarkus</module>
+        <module>quarkus-1.3</module>
+        <module>quarkus-1.4</module>
         <module>thorntail-2.2</module>
         <module>thorntail-2.3</module>
         <module>thorntail-2.4</module>
@@ -84,13 +86,13 @@
         <docker.plugin.version>0.33.0</docker.plugin.version>
         <jacoco.plugin.version>0.8.5</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>4.3.0</openapi-generator.plugin.version>
+        <openapi-generator.plugin.version>4.3.1</openapi-generator.plugin.version>
         <swagger-codegen.plugin.version>3.0.19</swagger-codegen.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
         <wildfly.plugin.version>2.0.2.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
-        <maven.assembly.plugin.version>3.2.0</maven.assembly.plugin.version>
+        <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
         <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
@@ -120,8 +122,8 @@
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.10.3</jackson-2-version>
-        <jackson-bom.version>2.10.3</jackson-bom.version>
+        <jackson-2-version>2.11.0</jackson-2-version>
+        <jackson-bom.version>2.11.0</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -139,7 +141,7 @@
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
         <mockito.version>3.3.3</mockito.version>
-        <byte-buddy.version>1.10.9</byte-buddy.version>
+        <byte-buddy.version>1.10.10</byte-buddy.version>
         <equalsverifier.version>3.1.13</equalsverifier.version>
         <json.unit.version>2.17.0</json.unit.version>
         <restassured.version>4.3.0</restassured.version>
