--- a/wildfly-22/pom.xml
+++ b/wildfly-22/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>wildfly-19</artifactId>
+    <artifactId>wildfly-22</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -20,16 +20,16 @@
         <!-- don't know where to find this version, could also be 1.0.1.Final -->
         <jboss-jakartaee-8.0.version>1.0.0.Final</jboss-jakartaee-8.0.version>
 
-        <!-- latest Wildfly 19 dependencies -->
-        <wildfly.bom.version>19.1.0.Final</wildfly.bom.version>
+        <!-- latest Wildfly 22 dependencies -->
+        <wildfly.bom.version>22.0.1.Final</wildfly.bom.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
-        <jakarta.activation.version>1.2.1</jakarta.activation.version>
+        <jakarta.activation.version>1.2.2</jakarta.activation.version>
         <javax.xml.bind.groupId>org.jboss.spec.javax.xml.bind</javax.xml.bind.groupId>
         <javax.xml.bind.artifactId>jboss-jaxb-api_2.3_spec</javax.xml.bind.artifactId>
         <!--version.org.jboss.spec.javax.xml.bind-->
-        <javax.xml.bind.version>2.0.0.Final</javax.xml.bind.version>
+        <javax.xml.bind.version>2.0.1.Final</javax.xml.bind.version>
         <javax.xml.ws.groupId>org.jboss.spec.javax.xml.ws</javax.xml.ws.groupId>
         <javax.xml.ws.artifactId>jboss-jaxws-api_2.3_spec</javax.xml.ws.artifactId>
         <!--version.org.jboss.spec.javax.xml.ws-->
@@ -47,13 +47,9 @@
         <!--version.org.jboss.spec.javax.transaction-->
         <javax.transaction.version>2.0.0.Final</javax.transaction.version>
 
-        <!-- jboss-jaxws-api_2.3_spec-2.0.0.Final requires the non-existing jakarta.jws-api-2.1.0, -->
-        <!-- force existing version via dependency management -->
-        <jakarta.jws.version>1.1.1</jakarta.jws.version>
-
-        <!-- MicroProfile Standard Versions provided by Wildfly 19 -->
+        <!-- MicroProfile Standard Versions provided by Wildfly 22 -->
         <mp.config.version>1.4</mp.config.version>
-        <mp.fault-tolerance.version>2.1</mp.fault-tolerance.version>
+        <mp.fault-tolerance.version>2.1.1</mp.fault-tolerance.version>
         <mp.health.version>2.2</mp.health.version>
         <mp.jwt.version>1.1.1</mp.jwt.version>
         <mp.metrics.version>2.3</mp.metrics.version>
@@ -61,23 +57,23 @@
         <mp.opentracing.version>1.3.3</mp.opentracing.version>
         <mp.rest-client.version>1.4.0</mp.rest-client.version>
         <smallrye.config.version>1.6.2</smallrye.config.version>
-        <smallrye.fault-tolerance.version>4.1.1</smallrye.fault-tolerance.version>
+        <smallrye.fault-tolerance.version>4.3.2</smallrye.fault-tolerance.version>
         <smallrye.health.version>2.2.0</smallrye.health.version>
         <smallrye.jwt.version>2.0.13</smallrye.jwt.version>
-        <smallrye.metrics.version>2.4.0</smallrye.metrics.version>
-        <smallrye.openapi.version>1.1.21</smallrye.openapi.version>
+        <smallrye.metrics.version>2.4.4</smallrye.metrics.version>
+        <smallrye.openapi.version>2.0.16</smallrye.openapi.version>
         <smallrye.opentracing.version>1.3.4</smallrye.opentracing.version>
-        <!-- wildfly 19 is using resteasy-client-microprofile instead of smallrye-rest-client -->
+        <!-- Wildfly 22 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- opentracing tracer implementation -->
         <io.opentracing.version>0.31.0</io.opentracing.version>
         <io.opentracing.contrib-jaxrs.version>0.4.1</io.opentracing.contrib-jaxrs.version>
         <io.jaegertracing.version>0.34.3</io.jaegertracing.version>
 
-        <!-- Artifact versions provided by Wildfly 19.1.0.Final -->
-        <!-- (see wildfly-19.1.0.Final/modules/system/layers/base and Wildfly BOM) -->
-        <resteasy.version>3.11.2.Final</resteasy.version>
-        <apache.httpclient.version>4.5.11</apache.httpclient.version>
+        <!-- Artifact versions provided by Wildfly 22.0.1.Final -->
+        <!-- (see wildfly-22.0.1.Final/modules/system/layers/base and Wildfly BOM) -->
+        <resteasy.version>3.14.0.Final</resteasy.version>
+        <apache.httpclient.version>4.5.13</apache.httpclient.version>
         <!-- note that wildfly provides jakarta.json* in the path modules/system/layers/base/javax/json/* -->
         <jakarta.json.version>1.1.6</jakarta.json.version>
         <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
@@ -85,21 +81,22 @@
         <yasson.version>1.0.5</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.10.1</jackson-2-version>
-        <jackson-bom.version>2.10.1</jackson-bom.version>
+        <jackson-2-version>2.11.3</jackson-2-version>
+        <jackson-bom.version>2.11.3</jackson-bom.version>
 
-        <infinispan.version>9.4.18.Final</infinispan.version>
-        <hibernate.version>5.3.15.Final</hibernate.version>
+        <!-- note that infinispan-directory-provider uses an older version -->
+        <infinispan.version>11.0.8.Final</infinispan.version>
+        <hibernate.version>5.3.20.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
-        <!-- Wildfly 19.1.0.Final uses Hibernate Validator 6.0.18.Final -->
+        <!-- Wildfly 22.0.1.Final uses Hibernate Validator 6.0.20.Final -->
         <jakarta.validation.version>2.0.2</jakarta.validation.version>
-        <hibernate.validator.version>6.0.18.Final</hibernate.validator.version>
+        <hibernate.validator.version>6.0.22.Final</hibernate.validator.version>
 
-        <!-- Wildfly 19.1.0.Final uses Weld 3.1.3 (corresponding to CDI 2.0) -->
-        <jakarta.inject.version>1.0</jakarta.inject.version>
+        <!-- Wildfly 22.0.1.Final uses Weld 3.1.4 (corresponding to CDI 2.0) -->
+        <jakarta.inject.version>1.0.3</jakarta.inject.version>
         <!-- TODO use org.jboss.weld:weld-core-bom -->
-        <weld.version>3.1.3.Final</weld.version>
+        <weld.version>3.1.4.Final</weld.version>
 
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
@@ -141,13 +138,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-            <!-- needed for jboss-jaxws-api_2.3_spec-2.0.0.Final -->
-            <dependency>
-                <groupId>jakarta.jws</groupId>
-                <artifactId>jakarta.jws-api</artifactId>
-                <version>${jakarta.jws.version}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -175,7 +165,7 @@
                     <version>${mp.health.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- Dependency convergence error (wildfly-19 -->
+                            <!-- Dependency convergence error (wildfly-22 -->
                             <!-- avoid already excluded dependency) -->
                             <groupId>javax.inject</groupId>
                             <artifactId>javax.inject</artifactId>
@@ -208,7 +198,7 @@
                     <version>${mp.rest-client.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- Dependency convergence error (wildfly-19 -->
+                            <!-- Dependency convergence error (wildfly-22 -->
                             <!-- avoid already excluded dependency) -->
                             <groupId>javax.inject</groupId>
                             <artifactId>javax.inject</artifactId>
@@ -226,16 +216,22 @@
                     <version>${smallrye.fault-tolerance.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- Dependency convergence error (wildfly-19 -->
+                            <!-- avoid Dependency convergence error (wildfly-22 -->
+                            <!-- has microprofile-metrics-api:2.3, smallrye-fault-tolerance already 2.3.2) -->
+                            <groupId>org.eclipse.microprofile.metrics</groupId>
+                            <artifactId>microprofile-metrics-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (smallrye-fault-tolerance:4.3.2 -->
+                            <!-- has smallrye-common-annotation:1.4.1, smallrye-metrics-api only 1.4.0) -->
+                            <groupId>io.smallrye</groupId>
+                            <artifactId>smallrye-metrics-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- Dependency convergence error (wildfly-22 -->
                             <!-- avoid already excluded dependency) -->
                             <groupId>jakarta.annotation</groupId>
                             <artifactId>jakarta.annotation-api</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <!-- Dependency convergence error (wildfly-19 -->
-                            <!-- avoid already excluded dependency) -->
-                            <groupId>jakarta.enterprise.concurrent</groupId>
-                            <artifactId>jakarta.enterprise.concurrent-api</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -250,7 +246,7 @@
                     <version>${smallrye.jwt.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-19 -->
+                            <!-- avoid Dependency convergence error (wildfly-22 -->
                             <!-- has microprofile-config-api:1.4, smallrye-jwt only 1.3) -->
                             <groupId>org.eclipse.microprofile.config</groupId>
                             <artifactId>microprofile-config-api</artifactId>
@@ -261,19 +257,25 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-metrics</artifactId>
                     <version>${smallrye.metrics.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (wildfly-22 -->
+                            <!-- has microprofile-metrics-api:2.3, smallrye-metrics already 2.3.2) -->
+                            <groupId>org.eclipse.microprofile.metrics</groupId>
+                            <artifactId>microprofile-metrics-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (smallrye-fault-tolerance:4.3.2 -->
+                            <!-- has smallrye-common-annotation:1.4.1, smallrye-metrics only 1.4.0) -->
+                            <groupId>io.smallrye.common</groupId>
+                            <artifactId>smallrye-common-annotation</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
-                    <artifactId>smallrye-open-api</artifactId>
+                    <artifactId>smallrye-open-api-core</artifactId>
                     <version>${smallrye.openapi.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-19 -->
-                            <!-- has microprofile-config-api:1.4, smallrye-open-api only 1.3) -->
-                            <groupId>org.eclipse.microprofile.config</groupId>
-                            <artifactId>microprofile-config-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -281,7 +283,7 @@
                     <version>${smallrye.opentracing.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-19 -->
+                            <!-- avoid Dependency convergence error (wildfly-22 -->
                             <!-- has microprofile-opentracing-api:1.3.3, smallrye-opentracing via opentracing-interceptors only 1.1) -->
                             <groupId>org.eclipse.microprofile.opentracing</groupId>
                             <artifactId>microprofile-opentracing-api</artifactId>
@@ -299,7 +301,7 @@
                     <version>${io.opentracing.contrib-jaxrs.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-19 -->
+                            <!-- avoid Dependency convergence error (wildfly-22 -->
                             <!-- has microprofile-opentracing-api:1.3.3, opentracing-jaxrs2 only 1.3) -->
                             <groupId>org.eclipse.microprofile.opentracing</groupId>
                             <artifactId>microprofile-opentracing-api</artifactId>
@@ -337,7 +339,7 @@
                     <version>${yasson.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-19 -->
+                            <!-- avoid Dependency convergence error (wildfly-22 -->
                             <!-- has org.glassfish:jakarta.json:1.1.6, yasson only 1.1.5) -->
                             <groupId>org.glassfish</groupId>
                             <artifactId>jakarta.json</artifactId>
@@ -368,10 +370,16 @@
                     <version>${hibernate.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- Dependency convergence error (wildfly-19 -->
+                            <!-- Dependency convergence error (wildfly-22 -->
                             <!-- avoid already excluded dependency) -->
                             <groupId>javax.xml.bind</groupId>
                             <artifactId>jaxb-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- Dependency convergence error (wildfly-22 -->
+                            <!-- avoid already excluded dependency) -->
+                            <groupId>jakarta.xml.bind</groupId>
+                            <artifactId>jakarta.xml.bind-api</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
